--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         <div class="container text-center">
             <div class="user-box">
                 <img src="img/user1.jpg" style="width: 200px; height:200px;">
-                <h1>John Doe</h1>
-                <p>Freelance Front End Developer</p>
+                <h1>Timur Dian Radha Sejati</h1>
+                <p>Web Design and Freelance Fullstack Developer</p>
 
             </div>
         </div>
